@@ -1,3 +1,7 @@
+12 Apr 2007
+   [TheXception]
+   - Added $system.call to call functions of dll/so files via kvs.
+
 10 Apr 2007
    [Alexey]
    - Configurable avatar scaling on load
